overflow hidden fix

--- a/src/games/Hanoi/hanoi.module.css
+++ b/src/games/Hanoi/hanoi.module.css
@@ -8,6 +8,7 @@
     background-color: lightskyblue;
     height: 95%;
     border-radius: 5px;
+    overflow: hidden;
 }
 .utilityBar {
     margin-top: 7px;
